<resources>
    <string name="app_name">Finance Manager</string>
    <string name="prihod">Prihod</string>
    <string name="rashod">Rashod</string>
    <string name="prihodi">Prihodi</string>
    <string name="rashodi">Rashodi</string>
    <string name="trenutno_stanje">Trenutno stanje</string>
    <string name="dodaj_prihod">Dodaj prihod</string>
    <string name="dodaj_rashod">Dodaj rashod</string>
    <string name="odaberite_datum">Odaberite datum</string>
    <string name="login_tagline">Pametno upravljanje vašim financijama</string>
    <string name="login_hint">Dodirnite otisak prsta za prijavu</string>
    <string name="login_success">Prijava uspješna</string>
    <string name="login_failed">Otisak nije prepoznat. Pokušajte ponovno.</string>
    <string name="login_unavailable">Na uređaju nije postavljeno zaključavanje zaslona.</string>
    <string name="login_continue">Nastavi</string>
    <string name="biometric_title">Prijava u Finance Manager</string>
    <string name="biometric_subtitle">Potvrdite identitet otiskom prsta ili PIN-om</string>
    <string name="login_fingerprint_description">Prijava otiskom prsta</string>
    <string name="greeting_morning">Dobro jutro</string>
    <string name="greeting_day">Dobar dan</string>
    <string name="greeting_evening">Dobra večer</string>
    <string name="overview_title">Vaš pregled</string>
    <string name="recent_transactions">Nedavne transakcije</string>
    <string name="empty_title">Još nema transakcija</string>
    <string name="empty_subtitle">Dodajte prvi prihod ili rashod i ovdje ćete vidjeti pregled.</string>
    <string name="today">Danas</string>
    <string name="yesterday">Jučer</string>
    <string name="transaction_deleted">Transakcija je obrisana</string>
    <string name="undo">Poništi</string>
    <string name="delete">Obriši</string>
    <string name="novi_prihod">Novi prihod</string>
    <string name="novi_rashod">Novi rashod</string>
    <string name="iznos">Iznos</string>
    <string name="amount_hint">0,00</string>
    <string name="currency_symbol">€</string>
    <string name="datum">Datum</string>
    <string name="kategorija">Kategorija</string>
    <string name="napomena">Napomena (opcionalno)</string>
    <string name="nova_kategorija">Nova kategorija</string>
    <string name="naziv_kategorije">Naziv kategorije</string>
    <string name="spremi">Spremi</string>
    <string name="dodaj">Dodaj</string>
    <string name="odustani">Odustani</string>
    <string name="natrag">Natrag</string>
    <string name="ok">U redu</string>
    <string name="error_amount">Unesite iznos veći od nule</string>
    <string name="error_category">Odaberite kategoriju</string>
    <string name="error_category_name">Unesite naziv kategorije</string>
    <string name="error_category_exists">Ta kategorija već postoji</string>
    <string name="category_added">Kategorija „%1$s“ je dodana</string>
    <string name="no_categories_hint">Još nemate kategorija, dodajte novu</string>
    <string name="reminders_title">Podsjetnici za plaćanje</string>
    <string name="upcoming_payments">Nadolazeća plaćanja</string>
    <string name="see_all">Sve</string>
    <string name="add_reminder_cta">Dodajte podsjetnik za račune i pretplate</string>
    <string name="add_reminder_cta_subtitle">Javit ćemo vam dan prije i na dan plaćanja.</string>
    <string name="new_reminder">Novi podsjetnik</string>
    <string name="edit_reminder">Uredi podsjetnik</string>
    <string name="reminders_empty_title">Nema podsjetnika</string>
    <string name="reminders_empty_subtitle">Dodajte stanarinu, režije ili pretplate i nećete zaboraviti platiti.</string>
    <string name="due_this_month">Za platiti ovaj mjesec</string>
    <string name="reminder_name">Naziv plaćanja</string>
    <string name="reminder_name_hint">npr. Stanarina</string>
    <string name="reminder_due_date">Datum plaćanja</string>
    <string name="reminder_period">Ponavljanje</string>
    <string name="reminder_category">Kategorija rashoda (opcionalno)</string>
    <string name="no_category">Bez kategorije</string>
    <string name="error_reminder_name">Unesite naziv plaćanja</string>
    <string name="pay">Plati</string>
    <string name="pay_title">Označiti kao plaćeno?</string>
    <string name="pay_message">„%1$s“ (%2$s) bit će dodano u rashode s današnjim datumom.</string>
    <string name="paid_next">Plaćeno · sljedeće plaćanje %1$s</string>
    <string name="paid_done">Plaćeno</string>
    <string name="reminder_deleted">Podsjetnik je obrisan</string>
    <string name="due_today">Dospijeva danas</string>
    <string name="due_tomorrow">Dospijeva sutra</string>
    <string name="period_once">Jednokratno</string>
    <string name="period_monthly">Mjesečno</string>
    <string name="period_quarterly">Tromjesečno</string>
    <string name="period_semi_annually">Polugodišnje</string>
    <string name="period_yearly">Godišnje</string>
    <string name="reminder_channel_name">Podsjetnici za plaćanje</string>
    <string name="reminder_channel_description">Obavijesti o računima koji uskoro dospijevaju</string>
    <string name="notifications_off">Obavijesti su isključene pa podsjetnici neće stizati.</string>
    <string name="enable">Uključi</string>
    <string name="test_notification">Pošalji probnu obavijest</string>
    <string name="test_notification_title">Obavijesti rade</string>
    <string name="test_notification_text">Ovako ćete dobivati podsjetnike za plaćanje.</string>
    <string name="test_notification_sent">Probna obavijest je poslana</string>
    <plurals name="due_overdue">
        <item quantity="one">Kasni %d dan</item>
        <item quantity="few">Kasni %d dana</item>
        <item quantity="other">Kasni %d dana</item>
    </plurals>
    <plurals name="due_in_days">
        <item quantity="one">Za %d dan</item>
        <item quantity="few">Za %d dana</item>
        <item quantity="other">Za %d dana</item>
    </plurals>
    <plurals name="reminders_due">
        <item quantity="one">%d plaćanje uskoro dospijeva</item>
        <item quantity="few">%d plaćanja uskoro dospijevaju</item>
        <item quantity="other">%d plaćanja uskoro dospijeva</item>
    </plurals>
    <string name="stats_title">Statistika</string>
    <string name="open_stats">Otvori statistiku</string>
    <string name="range_month">Mjesec</string>
    <string name="range_year">Godina</string>
    <string name="range_all">Sve</string>
    <string name="all_time">Sve vrijeme</string>
    <string name="previous_period">Prethodno razdoblje</string>
    <string name="next_period">Sljedeće razdoblje</string>
    <string name="total_expense">Ukupno potrošeno</string>
    <string name="total_income">Ukupno zarađeno</string>
    <string name="vs_previous_month">u odnosu na prethodni mjesec</string>
    <string name="vs_previous_year">u odnosu na prethodnu godinu</string>
    <string name="over_time">Kroz vrijeme</string>
    <string name="chart_hint">Dodirnite stupac za prikaz tog razdoblja</string>
    <string name="by_category">Po kategorijama</string>
    <string name="stats_empty_expense">Nema rashoda u ovom razdoblju.</string>
    <string name="stats_empty_income">Nema prihoda u ovom razdoblju.</string>
    <plurals name="transactions_count">
        <item quantity="one">%d transakcija</item>
        <item quantity="few">%d transakcije</item>
        <item quantity="other">%d transakcija</item>
    </plurals>
    <string name="uredi_prihod">Uredi prihod</string>
    <string name="uredi_rashod">Uredi rashod</string>
    <string name="delete_transaction_title">Obrisati transakciju?</string>
    <string name="delete_transaction_message">Transakcija će biti trajno obrisana.</string>
    <string name="budgets_title">Budžeti</string>
    <string name="budgets_intro">Postavite mjesečni limit za kategorije rashoda i javit ćemo vam kad mu se približite.</string>
    <string name="budgets_no_categories">Još nemate kategorija rashoda. Dodajte prvu pa joj postavite budžet.</string>
    <string name="budget_for_month">Mjesečni budžet · %1$s</string>
    <string name="budget_of">od %1$s</string>
    <string name="budget_spent_of">%1$s od %2$s</string>
    <string name="budget_remaining">Ostalo %1$s</string>
    <string name="budget_over_by">Prekoračeno za %1$s</string>
    <string name="budget_warning">Blizu granice</string>
    <string name="budget_exceeded">Prekoračeno</string>
    <string name="with_budget">S budžetom</string>
    <string name="without_budget">Bez budžeta</string>
    <string name="spent_this_month">Ovaj mjesec potrošeno %1$s</string>
    <string name="set_budget">Postavi</string>
    <string name="monthly_budget">Mjesečni budžet</string>
    <string name="remove_budget">Ukloni</string>
    <string name="budget_card_title">Budžet ovaj mjesec</string>
    <string name="budget_cta">Postavite mjesečne budžete</string>
    <string name="budget_cta_subtitle">Pratite koliko vam je ostalo po kategorijama.</string>
    <string name="budget_channel_name">Budžeti</string>
    <string name="budget_channel_description">Upozorenja kad se kategorija približi mjesečnom budžetu ili ga prijeđe</string>
    <string name="budget_alert_warning">%1$s: iskorišteno %2$d %% budžeta</string>
    <string name="budget_alert_exceeded">%1$s: budžet je prekoračen</string>
    <string name="budget_alert_text">Ovaj mjesec potrošeno %1$s od %2$s.</string>
    <plurals name="budgets_exceeded">
        <item quantity="one">%d kategorija je prekoračila budžet</item>
        <item quantity="few">%d kategorije su prekoračile budžet</item>
        <item quantity="other">%d kategorija je prekoračilo budžet</item>
    </plurals>
    <string name="transactions_title">Transakcije</string>
    <string name="see_all_count">Sve (%1$d)</string>
    <string name="search_hint">Pretraži napomene, kategorije, iznose</string>
    <string name="clear_search">Obriši pretragu</string>
    <string name="this_month">Ovaj mjesec</string>
    <string name="last_month">Prošli mjesec</string>
    <string name="this_year">Ova godina</string>
    <string name="date_range">Raspon datuma</string>
    <string name="clear_category_filter">Ukloni filter kategorije</string>
    <string name="clear_filters">Poništi filtere</string>
    <string name="no_matching_transactions">Nema transakcija koje odgovaraju filterima</string>
    <string name="more_options">Više opcija</string>
    <string name="categories_title">Kategorije</string>
    <string name="categories_empty">Još nema kategorija ove vrste.</string>
    <string name="edit_category">Uredi kategoriju</string>
    <string name="category_color">Boja</string>
    <string name="color_n">Boja %1$d</string>
    <string name="category_budget">budžet %1$s</string>
    <string name="delete_category">Obriši kategoriju %1$s</string>
    <string name="delete_category_title">Obrisati „%1$s“?</string>
    <string name="delete_category_unused">Kategorija nema transakcija pa se može odmah obrisati.</string>
    <string name="delete_category_used">U ovoj kategoriji je %1$s. Premjestite ih u drugu kategoriju (time se kategorije spajaju) ili ih ostavite bez kategorije.</string>
    <string name="move_to">Premjesti transakcije u</string>
    <string name="leave_uncategorized">Ostavi bez kategorije</string>
    <string name="merge_category">Spoji i obriši</string>
    <string name="goals_title">Ciljevi štednje</string>
    <string name="goals_intro">Postavite cilj, npr. ljetovanje ili novi laptop, i pratite koliko ste uštedjeli i koliko trebate odvajati mjesečno.</string>
    <string name="new_goal">Novi cilj</string>
    <string name="edit_goal">Uredi cilj</string>
    <string name="saved_in_goals">Ušteđeno u ciljevima</string>
    <string name="saved_so_far">Ušteđeno</string>
    <string name="goal_name">Naziv cilja</string>
    <string name="goal_name_hint">npr. Ljetovanje</string>
    <string name="error_goal_name">Unesite naziv cilja</string>
</resources>